[package]
edition = "2021"
name = "aoc-2021"
publish = false
version = "0.1.0"

[dependencies]
aoc-main = { version = "0.5.0", git = "https://github.com/remi-dupre/aoc", rev = "bb08c55", features = [
    'bench',
] }
aoc-runner = "*"
aoc-runner-derive = "*"
btree-range-map = "0.5.0"
console = "0.15.2"
enum-utils = "*"
itertools = "*"
lending-iterator = "0.1.6"
peg = "0.8.1"
petgraph = "0.6.2"
rayon = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
serde_plain = "*"
