[package]
edition = "2021"
name = "aoc-2021"
publish = false
version = "0.2024.0"

[dependencies]
aoc-main = { version = "0.5.0", git = "https://github.com/remi-dupre/aoc", rev = "bb08c55", features = [
    'bench',
] }
bit-set = "0.8.0"
btree-range-map = "0.7.2"
color-eyre = "0.6.3"
console = "0.15.8"
enum-utils = "0.1.2"
gpui = { git = "https://github.com/zed-industries/zed" }
itertools = "0.13.0"
lending-iterator = "0.1.7"
num = "0.4.3"
pathfinding = "4.11.0"
peg = "0.8.4"
petgraph = "0.6.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
serde_plain = "1"
tracing = "0.1.41"
tracing-forest = { version = "0.1.6", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
winnow = "0.6.20"

[dev-dependencies]
proptest = "1.0.0"
